<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    
	<string name="settings">Settings</string>
	
	<string name="resolution_label">Resolution</string>
	<string name="resolution_times"> x </string>
	<string-array name="resolution_array">
        <item>640x480</item>
        <item>480x640</item>
        <item>320x240</item>
        <item>240x320</item>
        <item>176x144</item>
        <item>144x176</item>
        <item>Custom</item>
    </string-array>

	<string name="ip_setting_label">Address</string>
	<string name="port_setting_label">Port</string>
	<string name="command_setting_label">Command</string>
	
	<string name="digits_increment">+</string>
	<string name="digits_decrement">-</string>
	<string name="address_dot">.</string>
	<string name="port_80">80</string>
	<string name="port_8080">8080</string>
	<string name="port_80_with_explanation">80 (for Ai-ball)</string>
	<string name="port_8080_with_explanation">8080 (for IP Webcam)</string>	
	<string name="command_streaming">\?action=stream</string>
	<string name="command_videofeed">videofeed</string>
	<string name="command_streaming_with_explanation">\?action=stream (for Ai-ball)</string>
	<string name="command_videofeed_with_explanation">videofeed (for IP Webcam)</string>
	
	<string name="settings_done">Done</string>
	
	<string name="app_name">Accueil</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera_view_nolog">Camera_view_nolog</string>
    <string name="camera_view">Camera view</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password for admin</string>
    <string name="title_activity_camera__view__admin">Camera_View_Admin</string>
    <string	name="zoomin">Zoom +</string>
    <string	name="zoomout">Zoom -</string>
    <string name="pause">Pause</string>
	<string name="rec">Rec</string>
	<string name="photo">Photo</string>
	<string name="title_activity_accueil">Dirijapp</string>
	
	
	<string name="title_disconnected">Disconnected</string>
	<string name="title_connecting">Connecting</string>
	<string name="title_imageerror">Error on preparing images</string>
	<string name="picture">Picture</string>
	<string name="display">Display</string>
</resources>