<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.camera.simplemjpeg.MjpegView
        android:id="@+id/mv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" >

                <Button
                    android:id="@+id/zoomin"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/zoomin"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/zoomout"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/relativeLayout1"
                android:layout_alignRight="@+id/relativeLayout1"
                android:layout_below="@+id/relativeLayout1"
                android:text="@string/zoomout"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom" >

            <Switch
                android:id="@+id/record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:textSize="30sp"	                
                android:gravity="bottom"
                android:textOff="Stop"
                android:textOn="Record"
                android:thumb="@drawable/hcg_switch_inner_holo_light"
                android:track="@drawable/hcg_switch_track_holo_light"
                 />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" >

            <Button
                android:id="@+id/picture"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="62dp"
                android:text="@string/picture"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/display"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/picture"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/picture"
                android:padding="5dp"
                android:paddingLeft="0dp"
                android:text="@string/display"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>